@@ -11,6 +11,9 @@ Release CMTK-1.1.4:
 
 - Removed: support for AMD Core Math Library (ACML), which was rarely used and
     complicated code unnecessarily
+- Removed: push-forward function of reformatx has long been obsolete because
+    we can invert any transformation and switch reference and floating image,
+    to achieve the same effect.
 
 
 Release CMTK-1.1.3 (2009-11-18):
